--- a/_publications/2012-09-30-paper-1.md
+++ b/_publications/2012-09-30-paper-1.md
@@ -2,6 +2,7 @@
 title: "Abundance, sex-ratio, length–weight relation, and condition factor of non-annual killifish Atlantirivulus riograndensis (Actinopterygii: Cyprinodontiformes: Rivulidae) in Lagoa do Peixe National Park, a Ramsar site of southern Brazil"
 collection: publications
 permalink: /publication/2012-09-30-paper-1
+excerpt:
 date: 2012-09-30
 venue: 'Acta Ichthyologica et Piscatoria'
 paperurl: 'https://doi.org/10.3750/AIP2011.42.3.09'
